--- a/md/9.POST.md
+++ b/md/9.POST.md
@@ -2,4 +2,5 @@
 Las apis usan endpoints padres y sistemas de versiones para los diferentes clientes.
 
 
-
+## Insomnia
+Los metodos GET se pueden ejecutar en el Nav, pero los POSTS necesitan un software que simule ese envio. Por eso usamos Insomnia.
