antes del asyncronismo de servicios

--- a/md/13.Servicios.md
+++ b/md/13.Servicios.md
@@ -15,7 +15,9 @@ Esto sigue el esquema de The Clean Architecture
 		- categorias
 		- ordenes de compra etc
 	2. Casos de uso: se encuentra lo relacionado a la logica de negocio:
-		- **Servicios**:  *usan fuentes de datos* tanto Internas (bases de datos) como Externas (librerias, APIs de 3ros, blockchains)
+		- **Servicios**:  logica que aplican los Routers, estos se basan en datos. 
+		Usan como fuentes de datos para poder operar. Internas -> Datos en Memoria, json locales = sincrono
+		Extenas -> DBs, librerias, APIs, Blocks = async
 	3. Controladores: son los que brindan acceso:
 		- routing
 		- middlewares
@@ -27,4 +29,7 @@ Debemos crear una nueva folder con la logica de Servicios que van a usar nuestro
 ![[Pasted image 20221129131233.png]]
 
 > Para nuestros servicios vamos a utilizar POO
+
+
+
 
