async await y captura de errores

--- a/md/15.AsyncAwait-en-Servicios-Captura-de-Errores.md
+++ b/md/15.AsyncAwait-en-Servicios-Captura-de-Errores.md
@@ -1,4 +1,7 @@
 
 En el mundo real los servicios son Asincronos y ahi es donde brilla Node
 
-Los metodos de los servicios deben ser Async
+Los metodos de los servicios deben ser Async y los routers deben de tener async/await
+
+Al usar asincronismo nos permite manejar errores con try/catch
+
