antes de usar boom

--- a/md/16.Middlewares.md
+++ b/md/16.Middlewares.md
@@ -20,8 +20,17 @@ Sin embargo pueden ser utilizados de forma global (capturar todos los errores de
 - reciben el Error First
 - y debemos tener los 4 parametros para que Node identifique que es un Middleware de tipo error
 
+>Asi no estes usando 'next' debe de ponerse porque es como detecta que es un Middleware de tipo Error!!!
+
 De esta forma podemos tener un Middleware global en el que le mandamos todas las peticiones y si le mandamos un error tira status(500), sino sigue normal.
+
+Estos se deben colocar en nuestro index.js principal (root) siempre despues de la funcion que ejecuta el Routing
 
 ## Casos de uso
 ![[Pasted image 20221201224928.png]]
 - pipes = tuberias que conectan unos con otros
+
+### Practica:
+Implementar Middleware Global para errores.
+Con este no tenemos que capturar el error uno por uno en nuestros metodos, sino que el Middleware Global se encarga de capturarlo y mandarlo de forma organizada.
+
