antes de usar cors

--- a/md/19.Validacion-de-datos-con-Joi.md
+++ b/md/19.Validacion-de-datos-con-Joi.md
@@ -8,3 +8,12 @@ npm i joi
 ```
 
 Los schemas corren cada uno en las Routers correspondientes
+Porque es por aqui q se reciven los Requests
+Los Schemas validan los Requests
+
+Luego estos datos pasan a los servicios
+Ahi son procesados y evaluados posibles lanzamiento de errores
+
+Luego los servicios retornan un valor (o un error) que el Router toma y lo pone en la Response o lo captura(catch) y lo procesa
+
+FIN🙂
