--- a/md/21.CORS.md
+++ b/md/21.CORS.md
@@ -27,20 +27,21 @@ Queremos darle acceso a nuestra API solo a nuestra whitelist.
 //importamos cors
 import cors from 'cors';
 
-app.use(cors());
-
+//implementando cors
 const whitelist = [
-	'http:/localhost:8080',
-	'https:myapp.com'
-];
-
+  'http://localhost:8080',
+  'http://localhost:9000',
+  'https://juniorpool.vercel.app'
+]
+  
 const options = {
-	origin: (origin, callback) => {
-		if (whitelist.includes(origin)){
-			callback(null, true);
-		} else {
-			callback(new Error('not alowed origin'));
-		}
-	}
+  origin: (origin, callback) => {
+    if (whitelist.includes(origin)) {
+      callback(null, true)
+    } else {
+      callback(new Error('not alowed origin'))
+    }
+  }
 }
+app.use(cors(options))
 ```
