antes de mandar a github

--- a/md/16.Middlewares.md
+++ b/md/16.Middlewares.md
@@ -10,7 +10,7 @@ Sin embargo pueden ser utilizados de forma global (capturar todos los errores de
 ![[Pasted image 20221201224342.png]]
 - con esto un middelware puede bloquear la cadena.
 
-## Estructura logica de los Middelwates:
+## Estructura logica de los Middelwares:
 ![[Pasted image 20221201224428.png]]
 - el next es el que nos permite ejecutar y seguir al siguiente middelware en caso que lo queramos
 - si no, usamos `res.send` para finalizar y enviar la respuesta
